fix overflow problems with slider

--- a/app/styles/general.less
+++ b/app/styles/general.less
@@ -121,12 +121,12 @@ h1 {
     border: 0;
     margin: 0;
     outline: 0;
-    z-index: 1;
   }
 
   &__items-view {
     flex: 1;
     height: 100%;
+    overflow: hidden; 
   }
 
   &__items-wrapper {
